common/ast/tests/it/testdata/expr-error.txt
---------- Input ----------
5 * (a and ) 1
---------- Output ---------
error: 
  --> SQL:1:12
  |
1 | 5 * (a and ) 1
  | -   -      ^ unexpected end of expression
  | |   |       
  | |   while parsing expression between `(...)`
  | while parsing expression


---------- Input ----------
a + +
---------- Output ---------
error: 
  --> SQL:1:5
  |
1 | a + +
  | -   ^ unable to parse the binary operator
  | |    
  | while parsing expression


---------- Input ----------
G.E.B IS NOT NULL AND
	col1 NOT BETWEEN col2 AND
		AND 1 + col3 DIV sum(col4)
---------- Output ---------
error: 
  --> SQL:3:3
  |
1 | G.E.B IS NOT NULL AND
  | - while parsing expression
2 |     col1 NOT BETWEEN col2 AND
  |          --- while parsing `[NOT] BETWEEN ... AND ...` expression
3 |         AND 1 + col3 DIV sum(col4)
  |         ^^^ unexpected end of expression


---------- Input ----------
CAST(col1 AS VARCHAR(0.1))
---------- Output ---------
error: 
  --> SQL:1:22
  |
1 | CAST(col1 AS VARCHAR(0.1))
  | ----                 ^^^ unable to parse int because it contains invalid characters
  | |                     
  | while parsing `CAST(... AS ...)` expression
  | while parsing expression


